--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@storyblok/js": "^4.4.1",
+    "@storyblok/react": "^5.4.18",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "storyblok-rich-text-react-renderer": "^3.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
