--- a/storyblok-app/package.json
+++ b/storyblok-app/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@storyblok/js": "^4.4.1",
     "@storyblok/react": "^5.4.18",
+    "@tailwindcss/postcss": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
@@ -65,8 +66,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "storyblok": "^3.34.0",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5"
   }
 }
-
