--- a/storyblok-app/package.json
+++ b/storyblok-app/package.json
@@ -45,7 +45,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "motion": "^11.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "16.0.3",
