--- a/storyblok-app/package.json
+++ b/storyblok-app/package.json
@@ -42,9 +42,11 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@storyblok/js": "^4.4.1",
     "@storyblok/react": "^5.4.18",
+    "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/postcss": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
@@ -62,6 +64,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "postcss": "^8.5.6",
