--- a/storyblok-app/package.json
+++ b/storyblok-app/package.json
@@ -14,7 +14,9 @@
     "type-check": "tsc --noEmit",
     "sb-login": "storyblok login",
     "pull-schemas": "storyblok pull-components --space 288494081274159 --rd --file-name production --path src/generated/ || true",
-    "gen:types": "npm run pull-schemas && storyblok generate-typescript-typedefs --sourceFilePaths ./src/generated/components.production.json --destinationFilePath src/generated/extracted-types.ts"
+    "gen:types": "npm run pull-schemas && storyblok generate-typescript-typedefs --sourceFilePaths ./src/generated/components.production.json --destinationFilePath src/generated/extracted-types.ts",
+    "deploy": "bash scripts/deploy.sh",
+    "deploy:windows": "powershell -ExecutionPolicy Bypass -File scripts/deploy.ps1"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
